[tool.poetry]
name = "payment-pulse-guard-ml-scoring"
version = "0.1.0"
description = "Fraud and AML ML scoring service for Payment Pulse Guard"
authors = ["Payment Pulse Guard Contributors"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.9.0"
numpy = "^2.1.0"
scikit-learn = "^1.5.0"
xgboost = "^2.1.0"
joblib = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
